fix: image section is centered align now

--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,8 @@ Burger
   margin: 0;
 }
 .images img {
+  display: block;
+  margin: 0 auto;
   width: 125px;
   height: 113px;
 }
